RESOLVED FIXED180961
Default scope used when registering a service worker is wrong
https://bugs.webkit.org/show_bug.cgi?id=180961
Summary Default scope used when registering a service worker is wrong
Chris Dumez
Reported 2017-12-18 18:01:32 PST
Default scope used when registering a service worker is wrong, it does not match: - https://w3c.github.io/ServiceWorker/#start-register (Step 4)
Attachments
Patch (11.50 KB, patch)
2017-12-18 18:44 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-12-18 18:44:23 PST
WebKit Commit Bot
Comment 2 2017-12-18 21:08:56 PST
Comment on attachment 329723 [details] Patch Clearing flags on attachment: 329723 Committed r226096: <https://trac.webkit.org/changeset/226096>
WebKit Commit Bot
Comment 3 2017-12-18 21:08:58 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-12-18 21:09:16 PST
Note You need to log in before you can comment on or make changes to this bug.